Adding Assessment pages

--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>My test page</title>
-  </head>
-  <body>
-    <h1>Smille9 Tutorial Page</h1>
-    <p>This is my page and I find this tag system <strong>interesting</strong>. Here is a link to the 
-        tutorial I am following: <a href= "https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Structuring_content/Basic_HTML_syntax#attributes" title="Tutorial"> Mozilla Tutorial</a>.
-        I am also learning MIPS with: <a href= "https://computerscience.missouristate.edu/mars-mips-simulator.htm" title="MARS MIPS SIMULATOR"> Simulator</a>. 
-        A picture of Mars is included below.
-    </p>
-    <!-- <p>Example of Comment syntax!</p> -->
-    <img src="https://dpetersanderson.github.io/index_files/Mars%20140.jpg"
-         width="400">
-    </img>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
 
+    <title>Smille9 HTML Basics</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <!-- The main header used across all the pages of our website -->
+
+    <header>
+      <h1>Sean M</h1>
+    </header>
+
+    <h2>HTML Reading Assessments</h2>
+    <nav>
+      <ul>
+        <li><a href="Assessment1.html">Assessment 1: Basics</a></li>
+        <li><a href="Assessment2.html">Assessment 2: Advanced</a></li>
+        <li><a href="Assessment3.html">Assessment 3: Assessment 3: Multimedia and Embedding</a></li>
+        <li><a href="Assessment4.html">Assessment 4: Tables</a></li>
+      </ul>
+    </nav>
+
+    <p> Other tutorial Topics are covered in intermediate steps to displaying these tutorials, like links.</p>
+    <footer>
+      <p>© 2025 smille9 TCSS 460</p>
+    </footer>
   </body>
 </html>
