--- a/Assessment2.html
+++ b/Assessment2.html
@@ -6,8 +6,7 @@
     <title>Assessment 2: Advanced</title>
 </head>
 
-<!-- Need some CSS for color?!/ link rel stylesheet...-->
-<!--Link back to main page!-->
+
 <body>
     
     <header>
@@ -18,6 +17,9 @@
     <a href="index.html">Main Page</a>
 
 <h1>Advanced text semantics</h1>
+<p>This page completes a tutorial by completing an example, filling in missing HTML elements from an incomplete html file.</p>
+
+<h2>Completed Example Below:</h2>
 
 <p>Let's start with a quote:</p>
 
