--- a/Assessment1.html
+++ b/Assessment1.html
@@ -6,7 +6,6 @@
     <title>Assessment 1</title>
 </head>
 
-<!-- Need some CSS for color?!/ link rel stylesheet...-->
 <body>
 
     <header>
@@ -25,7 +24,7 @@
         <ul> 
             <li>Unordered</li>
             <li>Ordered</li>
-            <li>Definition</li>
+            <li>Description</li>
         </ul>
         <li>Headers</li>
         <li>Paragraphs</li>
